tests/ui/error-codes/E0407.stderr
error[E0407]: method `b` is not a member of trait `Foo`
  --> $DIR/E0407.rs:9:5
   |
LL |     fn b() {}
   |     ^^^^^^^^^ not a member of trait `Foo`
   |
help: there is an associated function with a similar name
   |
LL |     fn a() {}
   |        ~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0407`.
